ajustes na rota de denuncias e no swagger
